08_Ingress/vhosting/deploy-svc-bar.yml
---
# Deployment(bar-app:8080)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      name: bar-pod
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080

---
# Service(bar-svc:80)
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 80
    targetPort: 8080
