08_Ingress/vhosting/deploy-svc-foo.yml
---
# Deployment(foo-app:8080)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      name: foo-pod
      labels:
        app: foo-app
    spec:
      containers:
      - name: foo-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080

---
# Service(foo-svc:80)
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
spec:
  selector:
    app: foo-app
  ports:
  - port: 80
    targetPort: 8080
