08_Ingress/vhosting/ingress-foo-bar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress2
spec:
  ingressClassName: nginx
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo-svc
            port:
              number: 80
  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar-svc
            port:
              number: 80
